--- a/personal.html
+++ b/personal.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="UTF-8">
-    <title>LU06.A01 - Personalien</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>LU06.A01 - Personalien</title>
+</head>
+<body>
+<form action="https://it.bzz.ch/demo/formdata/index.php" method="post">
+  <label for="firstname">Vorname:</label>
+  <input type="text" name="firstname" id="firstname"><br>
+  <label for="lastname">Nachname:</label>
+  <input type="text" name="lastname" id="lastname"><br>
+  <label for="residence">Vorname:</label>
+  <input type="text" name="residence" id="residence"><br>
+  <input type="reset"  value="reset">
+  <input type="submit" value="Absenden">
+</form>
+</body>
 
-  </body>
 </html>
